JSpecify + Model updates